# alice

./: CMakeLists.txt  Makefile.am  configure.ac
core/: alice.c  cmd.c  config.h.in  plugin.c  yamlconfig.c
include/: alice.h  log.h  plugin.h  yamlconfig.h
plugins/: CMakeLists.txt
plugins/dice/: CMakeLists.txt  dice.c
plugins/nickserv/: CMakeLists.txt
src/: alice.c  alice.h  cmd.c  cmd.h  dice.c  login.c  nickreclaimer.c  nickserv.c  plugin.c  yamlconfig.c
src/plugins/: nickserv.c
