CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

FIND_PACKAGE(PkgConfig REQUIRED)
FIND_PACKAGE(Threads REQUIRED)

PKG_CHECK_MODULES(IRC libirc REQUIRED)
PKG_CHECK_MODULES(EVENT libevent REQUIRED)
PKG_CHECK_MODULES(YAML yaml-0.1 REQUIRED)

SET(TARGET "alice")
SET(SOURCES
  "core/alice.c"
  "core/cmd.c"
  "core/plugin.c"
  "core/yamlconfig.c"
  )

SET(HEADERS
  "include/alice.h"
  "include/cmd.h"
  "include/log.h"
  "include/plugin.h"
  "include/yamlconfig.h"
  )

INCLUDE_DIRECTORIES(
  ${IRC_INCLUDE_DIRS}
  ${EVENT_INCLUDE_DIRS}
  ${YAML_INCLUDE_DIRS}
  ${CMAKE_CURRENT_BINARY_DIR}
  "${CMAKE_SOURCE_DIR}/include"
  )

ADD_EXECUTABLE(${TARGET} ${SOURCES} ${PLUGINS} ${HEADERS})
TARGET_LINK_LIBRARIES(${TARGET}
  ${IRC_LIBRARIES}
  ${EVENT_LIBRARIES}
  ${CMAKE_THREAD_LIBS_INIT}
  ${YAML_LIBRARIES}
  )

INSTALL(TARGETS ${TARGET} DESTINATION bin)

# Optional handling of plugins
ADD_SUBDIRECTORY(plugins)
CONFIGURE_FILE("core/config.h.in" "${CMAKE_CURRENT_BINARY_DIR}/config.h")
TARGET_SOURCES(alice PUBLIC "${CMAKE_CURRENT_BINARY_DIR}/config.h")
