CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PLUGIN_DICE ON CACHE BOOLEAN "dice plugin")

IF(PLUGIN_DICE)
  PKG_CHECK_MODULES(DICE libdice REQUIRED)

  INCLUDE_DIRECTORIES(${DICE_INCLUDE_DIRS})
  TARGET_SOURCES(alice PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/dice.c")
  SET_TARGET_PROPERTIES(alice PROPERTIES LINK_FLAGS -l${DICE_LIBRARIES})
ENDIF()
